--- a/css/style.css
+++ b/css/style.css
@@ -1,2 +1,9 @@
 html, body { height: 100%; margin: 0; }
-#viewport { position: relative; height: 100%; background: #1d1f20; }
+#viewport {
+    position: relative;
+    height: 100%;
+    background: #1d1f20; }
+
+    #viewport canvas {
+        border: 1px solid white;
+    }
