--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,13 @@
-html, body { height: 100%; margin: 0; }
+html, body { 
+    height: 100%;
+    margin: 0;
+}
 #viewport {
     position: relative;
     height: 100%;
-    background: #1d1f20; }
+    background: #1d1f20;
+}
 
-    #viewport canvas {
-        border: 1px solid white;
-    }
+#viewport canvas {
+    border: 1px solid white;
+}
