--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 html, body { 
     height: 100%;
     margin: 0;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
 #viewport {
     position: relative;
